--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <img class="w_100 max-width_806" src="./assets/images/logo (2).png" alt="pagelogo">
             </div>
             <div class="text_align">
-                <img class="position w_100 max-width_345" src="./assets/images/weareopen.png" alt="pagelogo">
+                <img class="position b_54 w_100 max-width_345" src="./assets/images/weareopen.png" alt="pagelogo">
             </div>
             <!-- <div class="position_2">
                 <img class="img1 max-width_134" src="./assets/images/cheese-burger.png" alt="#">
