--- a/index.html
+++ b/index.html
@@ -33,10 +33,7 @@
         <h1 class="text_align pt_73 h_1">WELCOME TO</h1>
         <div class="relative_position pt_27">
             <div class="text_align">
-                <img class="w_100 max-width_806" src="./assets/images/logo (2).png" alt="pagelogo">
-            </div>
-            <div class="text_align">
-                <img class="position b_54 w_100 max-width_345" src="./assets/images/weareopen.png" alt="pagelogo">
+                <img class="w_100 max-width_806" src="./assets/images/Group 48095502.png" alt="pagelogo">
             </div>
             <!-- <div class="position_2">
                 <img class="img1 max-width_134" src="./assets/images/cheese-burger.png" alt="#">
